# alpha-zero-general

./: Arena.py  Coach.py  MCTS.py  main.py  pyproject.toml  test_all_games.py
hex/: HexGame.py  HexLogic.py  HexPlayers.py
hex/pytorch/: HexNNet.py  NNet.py
