[tool.poetry]
name = "alpha-zero-general"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "alpha_zero_general"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"
torch = "==1.12.0"
coloredlogs = "^15.0.1"
tqdm = "^4.64.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
